# KFC-PW3-TB33-Kyndaliuk

./: README.md  main.py  pyproject.toml
config/: settings.py
data/: testing_data.csv  training_data.csv
database/: connection.py  crud.py  models.py
gui/: main_window.py
logic/: weather.py
machine_learning/: model.py  predict.py  preprocess.py
migrations/: env.py
migrations/versions/: 825a8cc9ae6a_initial_migration_add_weather_model.py
tests/: machine_learning_test.py  sanity_test.py
weather_forecast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
