[project]
name = "weather_forecast"
version = "0.1.0"
description = "Прогноз погоди"
authors = [
    { name="Костя Киндалюк", email="your@email.com" }
]
dependencies = ["sqlalchemy",
"mysqlclient",
"alembic",
"pandas",
"numpy",
"scikit-learn",
"ttkbootstrap",
"pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]